--- a/config/services.yaml
+++ b/config/services.yaml
@@ -8,18 +8,25 @@ parameters:
 services:
     # default configuration for services in *this* file
     _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
+        autowire: true # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
-        resource: '../src/'
+        resource: "../src/"
         exclude:
-            - '../src/DependencyInjection/'
+            - "../src/DependencyInjection/"
             # - '../src/Entity/'
-            - '../src/Kernel.php'
-            - '../src/Tests/'
+            - "../src/Kernel.php"
+            - "../src/Tests/"
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    App\Doctrine\Listener\CategorySlugListener:
+        tags:
+            [
+                {
+                    name: "doctrine.orm.entity_listener",
+                    event: prePersist,
+                    entity: App\Entity\Category,
+                },
+            ]
