--- a/composer.json
+++ b/composer.json
@@ -74,5 +74,8 @@
             "allow-contrib": false,
             "require": "5.3.*"
         }
+    },
+    "require-dev": {
+        "fakerphp/faker": "^1.15"
     }
 }
