--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,12 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "composer/package-versions-deprecated": "1.11.99.2",
+        "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.9",
+        "phpdocumentor/reflection-docblock": "^5.2",
         "sensio/framework-extra-bundle": "^6.1",
         "symfony/asset": "5.3.*",
         "symfony/console": "5.3.*",
@@ -23,9 +25,12 @@
         "symfony/maker-bundle": "^1.33",
         "symfony/mime": "5.3.*",
         "symfony/monolog-bundle": "^3.0",
+        "symfony/property-access": "5.3.*",
+        "symfony/property-info": "5.3.*",
         "symfony/proxy-manager-bridge": "5.3.*",
         "symfony/runtime": "5.3.*",
         "symfony/security-bundle": "5.3.*",
+        "symfony/serializer": "5.3.*",
         "symfony/stopwatch": "5.3.*",
         "symfony/string": "5.3.*",
         "symfony/twig-bundle": "5.3.*",
