--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.3.*",
         "symfony/framework-bundle": "5.3.*",
+        "symfony/mailer": "5.3.*",
         "symfony/maker-bundle": "^1.33",
         "symfony/mime": "5.3.*",
         "symfony/monolog-bundle": "^3.0",
@@ -33,11 +34,14 @@
         "symfony/serializer": "5.3.*",
         "symfony/stopwatch": "5.3.*",
         "symfony/string": "5.3.*",
+        "symfony/translation": "5.3.*",
         "symfony/twig-bundle": "5.3.*",
         "symfony/validator": "5.3.*",
         "symfony/var-dumper": "5.3.*",
         "symfony/web-profiler-bundle": "5.3.*",
         "symfony/yaml": "5.3.*",
+        "symfonycasts/reset-password-bundle": "^1.9",
+        "symfonycasts/verify-email-bundle": "^1.5",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/intl-extra": "^3.3",
         "twig/twig": "^2.12|^3.0"
