--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,7 +4,8 @@ security:
     password_hashers:
         App\Entity\User:
             algorithm: auto
-
+    role_hierarchy:
+        ROLE_ADMIN: [ROLE_USER, ROLE_AUTHOR]
 
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
@@ -36,5 +37,5 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/admin, roles: ROLE_USER }
         # - { path: ^/profile, roles: ROLE_USER }
