[ FIX ] - Added function to delete stored image when deleting its entity
- Added the requirement to log in to post a comment

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -41,3 +41,13 @@ services:
                     entity: App\Entity\Trick,
                 },
             ]
+
+    App\Doctrine\Listener\ImageRemoveListener:
+        tags:
+            [
+                {
+                    name: "doctrine.orm.entity_listener",
+                    event: preRemove,
+                    entity: App\Entity\Image,
+                },
+            ]
