--- a/config/services.yaml
+++ b/config/services.yaml
@@ -42,12 +42,22 @@ services:
                 },
             ]
 
-    App\Doctrine\Listener\ImageRemoveListener:
+    App\Doctrine\Listener\ContributionRemoveListener:
         tags:
             [
                 {
                     name: "doctrine.orm.entity_listener",
                     event: preRemove,
-                    entity: App\Entity\Image,
+                    entity: App\Entity\Contribution,
+                },
+            ]
+
+    App\Doctrine\Listener\TrickRemoveListener:
+        tags:
+            [
+                {
+                    name: "doctrine.orm.entity_listener",
+                    event: preRemove,
+                    entity: App\Entity\Trick,
                 },
             ]
