--- a/.env
+++ b/.env
@@ -1,22 +1,25 @@
-###> symfony/framework-bundle ###
-APP_ENV=prod
+# ##> symfony/framework-bundle ###
+APP_ENV=dev
 APP_SECRET=fc966597c85e9359603575518c8ab179
-###< symfony/framework-bundle ###
+# ##< symfony/framework-bundle ###
 
-###> doctrine/doctrine-bundle ###
+# ##> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
-###< doctrine/doctrine-bundle ###
+# ##< doctrine/doctrine-bundle ###
 
-###> symfony/mailer https://symfony.com/doc/current/mailer.html#transport-setup ###
+# ##> symfony/mailer https://symfony.com/doc/current/mailer.html#transport-setup ###
 # MAILER_DSN=smtp://localhost
-###< symfony/mailer ###
+# ##< symfony/mailer ###
 
-###> Admin configuration, used in fixtures loading ###
+# ##> Admin configuration, used in fixtures loading ###
 ADMIN_PSEUDO='Admin'
 ADMIN_EMAIL='your@email.com'
 ADMIN_PASSWORD='yourPassword'
+
+# ##> Email for contact ###
+EMAIL_CONTACT='mailer@your-domain.com'
