--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -5,7 +5,9 @@ security:
         App\Entity\User:
             algorithm: auto
     role_hierarchy:
-        ROLE_ADMIN: [ROLE_USER, ROLE_AUTHOR]
+        ROLE_CONTRIBUTOR: ROLE_USER
+        ROLE_AUTHOR: ROLE_CONTRIBUTOR
+        ROLE_ADMIN: ROLE_AUTHOR
 
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
